--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Abhishek Nagekar
-description: Web & Security Engineer
+title: HEA_CODING
+description: Web Engineer(지망)
 site_title: '@abhn - Abhishek Nagekar'
 
 # Build settings
@@ -9,7 +9,7 @@ exclude: [vendor/ruby]
 # Personalization
 github_username: abhn
 blog_url: https://www.nagekar.com
-email: abhishek@nagekar.com
+email: dvlpsh99@gmail.com
 keybase_username: abhn
 twitter_username: abhn_
 reddit_username: abhn
